--- a/index.html
+++ b/index.html
@@ -14,7 +14,17 @@
 	<script src="src/js/main/board.js" defer></script>
 	<script src="src/js/main/layer.js" defer></script>
 	<script src="src/js/main/sketch.js" defer></script>
-	<script src="src/js/battle/card.js" defer></script>
+	<script src="src/js/battle/impactMark/acupuncture.js" defer></script>
+	<script src="src/js/battle/impactMark/markup.js" defer></script>
+	<script src="src/js/battle/impactMark/pattern.js" defer></script>
+	<script src="src/js/battle/tactic/reserve.js" defer></script>
+	<script src="src/js/battle/tactic/technique.js" defer></script>
+	<script src="src/js/battle/tactic/deed.js" defer></script>
+	<script src="src/js/battle/tactic/splash.js" defer></script>
+	<script src="src/js/battle/tactic/absorb.js" defer></script>
+	<script src="src/js/battle/weapon.js" defer></script>
+	<script src="src/js/battle/hero.js" defer></script>
+	<script src="src/js/battle/villain.js" defer></script>
 	<script src="src/js/battle/battleField.js" defer></script>
 	<script src="src/js/cultivation/fulcrum.js" defer></script>
 	<script src="src/js/cultivation/droplet.js" defer></script>
