--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<script src="src/js/battle/tactic/reserve.js" defer></script>
 	<script src="src/js/battle/tactic/technique.js" defer></script>
 	<script src="src/js/battle/tactic/deed.js" defer></script>
+	<script src="src/js/battle/tactic/pose.js" defer></script>
 	<script src="src/js/battle/tactic/splash.js" defer></script>
 	<script src="src/js/battle/tactic/absorb.js" defer></script>
 	<script src="src/js/battle/weapon.js" defer></script>
