--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Hara</title>
+	<title>Pakanga</title>
 
 	<script src="src/libs/p5.js" defer></script>
 	<script src="src/libs/p5.dom.js" defer></script>
